# TuxChan

./: AUTHORS  ChangeLog  README  TODO  autogen.sh  configure.ac
src/: Makefile.am  channel-selector.c  channel-selector.h  common.h  editable-text.c  editable-text.h  file-selector.c  file-selector.h  icons.h  main.c
